# FacturaAI

./: .env.example  .gitignore  .pre-commit-config.yaml  =4.8.0  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  fly.toml  opencode.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  skills-lock.json
.agents/skills/paddleocr-text-recognition/scripts/: configure.py  lib.py  ocr_caller.py  smoke_test.py
.github/workflows/: ci.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: index.html
scripts/: lint-fix.sh
src/api/: deps.py  main.py
src/api/v1/: __init__.py  apikeys.py  auth.py  jobs.py  rate_limit.py  subscriptions.py  webhooks.py
src/core/: celery_app.py  config.py  exceptions.py  feedback.py  file_utils.py  ocr.py  security.py
src/db/: __init__.py  redis.py  session.py
src/models/: apikey.py  invoice.py
src/schemas/: apikey.py  auth.py  error.py  subscription.py
src/services/: apikey.py  auth.py  invoice_parser.py  llm_service.py  mercadopopago.py  ocr_service.py  storage.py  subscription.py
src/services/workers/: __init__.py  async_processor.py  tasks.py
src/utils/: config.py
tests/: conftest.py  test_api.py  test_apikeys.py  test_auth.py  test_jobs.py  test_subscriptions.py
